# jaxkd

./: .gitignore  README.md  demo.ipynb  pyproject.toml  test.py  trial.py
.github/workflows/: benchmark.yml  tests.yml
benchmark/: run_benchmark.py
jaxkd/: __init__.py  tree.py
tests/: test_tree.py
